made void methods in GObject hierarchy return 'this' for chaining